--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,48 @@
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
+#include <signal.h>
+#include <stdio.h>
+#include <exception>
 
-# Precompiled Headers
-*.gch
-*.pch
+#include <tgbot/Bot.h>
+#include <tgbot/net/TgLongPoll.h>
+#include <tgbot/TgException.h>
+#include <tgbot/tools/StringTools.h>
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
+using namespace std;
+using namespace TgBot;
 
-# Fortran module files
-*.mod
+bool sigintGot = false;
 
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
+int main() {
+    signal(SIGINT, [](int s) {
+        printf("SIGINT got");
+        sigintGot = true;
+    });
 
-# Executables
-*.exe
-*.out
-*.app
+    Bot bot("100743144:AAEzJJSWYezyUYlwgzSjf0-5hdokGyUjbXM");
+    bot.getEvents().onCommand("start", [&bot](Message::Ptr message) {
+        bot.getApi().sendMessage(message->chat->id, "Hi!");
+    });
+    bot.getEvents().onAnyMessage([&bot](Message::Ptr message) {
+        printf("User wrote %s\n", message->text.c_str());
+        if (StringTools::startsWith(message->text, "/start")) {
+            return;
+        }
+        bot.getApi().sendMessage(message->chat->id, "Your message is: " + message->text);
+    });
+
+    printf("try {\n");
+    try {
+        printf("Bot username: %s\n", bot.getApi().getMe()->username.c_str());
+
+        TgLongPoll longPoll(bot);
+        while (!sigintGot) {
+            printf("Long poll started\n");
+            longPoll.start();
+        }
+    } catch (TgException& e) {
+        printf("error: %s\n", e.what());
+    }
+    printf("}\n");
+
+    return 0;
+}
